# pontifex_archive

./: BOOKS_PLAN.md  LICENSE  README.md  download_documents.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: apis.yml  documents.yml  flutter-release.yml  release.yml
api/: documents.json  popes.json  popes.schema.json  privacy.txt
api/data/: books.json  en-deus_caritas_est.json  en-fratelli_tutti.json  en-lumen_fidei.json  en-spe_salvi.json  la-caritas_in_veritate.json  la-deus_caritas_est.json  la-fratelli_tutti.json  la-laudato_si.json  la-spe_salvi.json  pt-laudato_si.json  pt-lumen_fidei.json  pt-spe_salvi.json  search.json
app/: .gitignore  README.md  pubspec.yaml  slang.yaml
app/fastlane/: Appfile  Fastfile  README.md
app/integration_test/: mobile_app_test.dart  wait_for.dart
app/lib/: app.dart  i18n.g.dart  injection_container.dart  main.dart  (+1 more)
documents/: documents.json
epub_builder/: convert_webp_to_png.py  pyproject.toml
epub_builder/epub_builder/: builder.py
epub_builder/epub_builder/epub/: __init__.py  creator.py
epub_builder/epub_builder/providers/: api.py
epub_builder/epub_builder/repositories/: popes.py  structures.py
epub_builder/epub_builder/scrapers/vatican/: __init__.py  encyclical_peper_scraper.py
generator/: pyproject.toml
generator/src/generator/: __init__.py  pdf_main.py
generator/src/generator/epub/: creator.py
generator/src/generator/pdf/: __init__.py  creator.py
generator/src/generator/repositories/: popes.py  structures.py
generator/src/generator/scrapers/vatican/: encyclical_peper_scraper.py
(+872 files in other folders)
