[tool.poetry]
name = "epub-builder"
version = "0.1.0"
description = ""
authors = ["Emerson Almeida <emersonalmeidax@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

requests = "^2.32.3"
bs4 = "^0.0.2"
ebooklib = "^0.18"
[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "epub_builder.builder:generate"